main.css
@import url("https://fonts.googleapis.com/css2?family=Public+Sans&display=swap");

* {
    
    box-sizing: border-box;
    margin:0;
    padding:0;
}

html {

        height: 100%;
}

body{
        font-family:"public sans", sans-serif;
        font-size: 1.2rem;
        min-height: 100%;
}

.contenedorMain > * {
        box-shadow: -1px 1px 7px 0px rgba(150, 97, 203, 0.527);
        border-radius: 4px;
        padding: 4px;
        text-align: center;
}

.header{
        grid-area: header;
        background-color: rgba(13, 32, 208, 0.316);
}

.keyselector{
    grid-area: keyselector;
    background-color: rgba(158, 230, 43, 0.356);
}

.ksbuttons li{
    display: inline;
}

.main{
    grid-area:main;
    background-color: rgba(13, 208, 182, 0.316);
}

.mainbuttons li{
    display: inline;
}

.sidefield{
    grid-area: sidefield;
    background-color: rgba(153, 13, 208, 0.316);
}

.sidebuttons li{
    display: inline;
}

.footer{
    grid-area: footer;
    background-color: rgba(170, 157, 81, 0.493);
}

.contenedorMain {
     display: grid;
     gap: 10px;
     grid-template: 
     "header" 50px
     "keyselector" 50px
     "main" auto
     "sidefield" auto
     "footer" 50px;
}

    
@media (min-width:600px) {

    .contenedorMain {
      /*  grid-template-columns: 50% auto; /* define el ancho de las columnas */
      /*  grid-row: 50px auto 50px;/* define el alto de las columnas */
      /*  grid-template-areas:  /*define el orden de los elementos */
      /* "header header"
         "main   sidefield"
         "footer footer";*/  /*desactivado en favor del gri-template */

         grid-template: 
         "header header" 50px /*organizacion y alto de las filas */
         "keyselector keyselector" 50px
         "main   sidefield" auto /*organizacion y alto de las filas */
         "footer footer" 50px /  /*organizacion y alto de las filas */
         50% auto  /* luego del "/" se define el ancho de las columnas */
        ; 
    } 

}   
       
@media (min-width:900px) {

    .contenedorMain {
      /*  grid-template-columns: 50% auto; /* define el ancho de las columnas */
      /*  grid-row: 50px auto 50px;/* define el alto de las columnas */
      /*  grid-template-areas:  /*define el orden de los elementos */
      /* "header header"
         "main   sidefield"
         "footer footer";*/  /*desactivado en favor del gri-template */

         grid-template: 
         "header header header" 50px /*organizacion y alto de las filas */
         "keyselector main   sidefield" auto /*organizacion y alto de las filas */
         "footer footer footer" 50px /  /*organizacion y alto de las filas */
         150px auto 40% /* luego del "/" se define el ancho de las columnas */
        ; 
    } 

}   


    

